FIX: dark mode other minor fixes

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ body {
   width: 100%;
   padding-top: 70px;
   position: absolute;
-  min-height: 100%;
+  min-height: 100vh !important;
 }
 
 .dashboard__container {
