--- a/src/pages/Portafolio/Portafolio.css
+++ b/src/pages/Portafolio/Portafolio.css
@@ -1,5 +1,4 @@
 .coinsummary {
-    box-shadow:0 .5rem 1rem rgba(0,0,0,.15);
     padding:.5rem;
     margin-top:.5rem;
     color: var(--text);
